# Fleming-AI

./: .env.example  .gitignore  CLAUDE_SESSION_SETUP.md  DEPLOYMENT.md  DUAL_PROCESS_README.md  DUAL_SYSTEM_STATUS.md  MISSION_1000.md  README.md  README_KR.md  STATUS.md  STATUS_REPORT.md  VERIFICATION_REPORT.txt  com.fleming.ai.plist  main.py  monitor_1000.sh  monitor_fleming.sh  paper.aux  paper.out  pyproject.toml  pyrightconfig.json  start_service.sh  test_1_bad_hypothesis.py  test_alex_live.py  test_alex_paper_live.py  test_claude_response.py  test_full_paper_review.py  test_quick.sh  test_without_arxiv.py
data/: collection_cursor.txt
docs/: alex_api_cost_analysis.md  alex_continuous_cost.md  alex_model_selection.md  alex_training_plan.md  backend_comparison.md  google_ai_studio_setup.md  gpt5_mini_reality_check.md
experiment/: STATUS.md  alex_review_full_paper.json  alex_review_live.json  alex_review_vit_paper.json  fleming_alex_validation_report.md  paper_improvement_report.md
scripts/: SCHEDULER_README.md  TEST_E2E_README.md  collect_cursor.py  collect_cursor_final.py  collect_great_papers.py  collect_nonstop.py  collect_papers_1000.py  continuous_collection.py  download_pdfs.py  embed_papers.py  enrich_papers.py  export_hypotheses.py  fleming-collection.service  generate_academic_paper.py  generate_hypotheses_continuous.py  install_service.sh  run_full_research.py  schedule_collection.py  start_continuous.sh  start_dual_process.sh  sync_papers_to_gdrive.py  test_e2e.py
templates/: academic_paper.tex  individual_paper.tex  paper_template.md
(+151 files in other folders)
